--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,15 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
+:root {
+  --primary: #61dafb;
+  --secondary: #282c34;
+  --tertiary: #646cff;
+  --quaternary: #888;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+}
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: var(--secondary);
+  display: flex;
+  padding: 1em;
+  color: white;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: stretch;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -33,6 +50,13 @@
   }
 }
 
+header {
+  background-color: #282c34;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: .3em;
+}
 .card {
   padding: 2em;
 }
