--- a/ui/src/login.css
+++ b/ui/src/login.css
@@ -26,7 +26,7 @@ body {
     font-family: 'Poppins';
     background-size: cover;
     background-repeat: repeat-y;
-    background-image: url("assets/wallpaperflare.com_wallpaper (1).jpg");
+    background-image: url("assets/doodle2.jpg");
     height: 100vh;
     display: flex;
     flex-direction: column;
